# alterAI

./: .env.example  .gitattributes  .gitignore  PRIVACY.md  README.md  analysis_options.yaml  docker-compose.yml  pubspec.yaml  railway.json  run_web.bat
.github/workflows/: ci.yml  release-android.yml
android/app/: build.gradle.kts  proguard-rules.pro
docs/: ARCHITECTURE.md  alter_lens.md  alter_unicorn_launch_blueprint.md  android_phone_control.md  hey_alter_assistant_mode.md  life_os_digital_twin.md  memory_core.md  mission_control_frontend.md  multiagent_smartphone_assistant.md  nfc_networking.md  sarvam_multilingual_runtime.md
frontend/alter_flutter/: README.md  pubspec.yaml
infra/docker/: Dockerfile.service  README.md
infra/railway/: Dockerfile  start.sh
lib/: main.dart
scripts/: clear_seeded_data.sql  collect-android-crashlogs.ps1  expose-backend-tunnel.ps1  install-and-smoke-test-android.ps1  install_priv_app_device_owner.ps1  provision-avd-device-owner.ps1  release-debug-apk.ps1  start-backend.ps1  supabase_db_push.ps1  test-backend-health.ps1
services/alter_lens/: .env.example  README.md  pyproject.toml
services/api_gateway/: .env.example  README.md  pyproject.toml
services/api_gateway/src/alter_api_gateway/: __init__.py  api.py  config.py  sarvam_client.py  schemas.py  service.py  web_research.py
services/api_gateway/tests/: test_api_gateway.py
services/clone_council/: .env.example  README.md  pyproject.toml
services/clone_council/src/alter_clone_council/: __init__.py  agents.py  api.py  config.py  graph.py  model_client.py  prompts.py  schemas.py  service.py  testing.py
services/clone_council/tests/: test_clone_council_graph.py
services/future_simulation/: .env.example  README.md  pyproject.toml
services/memory_system/: .env.example  README.md  pyproject.toml
services/officekit/: .env.example  README.md  pyproject.toml
services/opportunity_engine/: .env.example  README.md  pyproject.toml
services/reputation_engine/: .env.example  README.md  (+1 more)
services/social_graph/: .env.example  README.md  pyproject.toml
services/social_graph/examples/: team_request.json
services/social_graph/schema/: 001_social_graph.cypher
services/social_graph/src/alter_social_graph/: __init__.py  api.py  config.py  repository.py  schemas.py  service.py
services/social_graph/tests/: test_api.py  test_social_graph_service.py
supabase/: config.toml
test/: agent_execution_runtime_test.dart  calendar_request_parser_test.dart  device_control_bridge_test.dart  digital_twin_models_test.dart  feedback_and_privacy_test.dart  mission_demo_test.dart  native_wake_service_test.dart  on_device_ai_test.dart  on_device_resource_governor_test.dart  permission_hub_bridge_test.dart  secure_blob_store_test.dart  voice_inference_cascade_test.dart  voice_local_fallback_test.dart  voice_runtime_test.dart  voice_turn_orchestrator_test.dart  wake_word_test.dart  widget_test.dart
web/: index.html  manifest.json
(+355 files in other folders)
